--- a/index.html
+++ b/index.html
@@ -134,8 +134,11 @@
                             <li>  &nbsp </li>
                             <li>  &nbsp </li>
                             <li>  &nbsp </li>
-                            <li class>
+                            <!-- <li class>
                               <a class="page-scroll" href="#contact" style="font-size:25px; color:white;"> Contact </a>
+                            </li> -->
+                            <li id="menu-item-22" class="menu-item menu-item-type-post_type menu-item-object-page">
+                              <a href="https://google.com/" style="font-size:20px; color:white;">Contact</a>
                             </li>  
                           </u1>
                         </div>  <!--div 12 ends -->
