--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                               <a class="page-scroll" href="#contact" style="font-size:25px; color:white;"> Contact </a>
                             </li> -->
                             <li id="menu-item-22" class="menu-item menu-item-type-post_type menu-item-object-page">
-                              <a href="https://prsecure.github.io/Senthil.github.io/Contact/" style="font-size:20px; color:white;">Contact</a>
+                              <a href="#contact" style="font-size:20px; color:white;">Contact</a>
                             </li>  
                           </u1>
                         </div>  <!--div 12 ends -->
